# bobi-agent

./: .dispatch.yaml  .dockerignore  .gitignore  .mcp.json  .modastack.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  MODASTACK-CHANGELOG.md  MODASTACK.md  README.md  bootstrap.sh  example.dispatch.yaml  example.modastack.yaml  hatch_build.py  pack.json  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: dogfood.md  sync-tickets.md
.context/: intake.md
.dispatch/: history.md  state.md
.modastack/: agent.yaml  config.yaml  handoff.md  manager.md  monitors.yaml
agents/: registry.yaml
bobi/: __main__.py  __version__.py  auth_bootstrap.py  browser.py  build.py  build_render.py  chat_history.py  cli.py  compose.py  concurrency_semaphore.py  config.py  conversation.py  costs.py  dep_bootstrap.py  deploy.py  doctor.py  env.py  history.py  host_caps.py  http.py  inbox.py  ingress.py  install.py  launch_admission.py  local_deps.py  manager_health.py  mcp_handshake.py  memory.py  paths.py  reconcile.py  registry.py  runtime_guard.py  scaffold.py  sdk.py  service.py  session.py  slack.py  slack_manifest.py  spend_governor.py  state_version.py  (+6 more)
bobi_deploy/: pyproject.toml
bobi_deploy/src/bobi_deploy/: __init__.py  build.py  cli.py  deploy.py  scaffold.py
bobi_deploy/tests/: conftest.py  test_build.py  test_deploy.py  test_deploy_registry.py  test_packaging.py  test_scaffold.py
bobi_deploy/tests/integration/: test_bobi_build.py
brain/: context.py  executor.py  loop.py  prompt.md  watcher.py
brand-identity/: SKILL.md
dashboard/: app.py  data.py
deploy/: INSTALL.md  auto-deploy.sh  check-deploy.sh  install.sh  modastack.service  setup-ci-runner.sh  setup-ec2.sh  update-webhooks.sh
deployments/: README.md  canary.yaml  ci-smoke.yaml  codex-smoke.yaml  codex-test.yaml  codex-test.yaml.example  defaults.yaml  eng-team.yaml  eng-team.yaml.example
dispatch/: board_setup.py  cli.py  config.py  conversation.py  daemon.py  dispatcher.py  engine.py  launchd.py  linear_api.py  linear_state.py  pr_monitor.py  reporter.py  scanner.py  session.py  setup.py  skills.py  state.py  summarizer.py  ticket_splitter.py
docker/: docker-entrypoint.sh  healthcheck.sh  noop-deps.sh
docs/: AGENT_PACK_ONBOARDING.md  AGENT_TEAM_ONBOARDING.md  BUILDING_AGENT_TEAMS.md  CONTAINER.md  CONTAINERIZED_DEPLOYMENT.md  CUSTOM_WORKFLOWS.md  DEPLOYMENT.md  EVENT_DRIVEN_AGENTS.md  EVENT_SERVER.md  FRIENDS-FAMILY-SECURITY-TODO.md  FRONTEND_QA.md  LANDSCAPE_ANALYSIS.md  LINEAR_SETUP.md  MONITORS.md  OPEN_CORE_SAAS_STRATEGY.md  OVERVIEW.md  QUICKSTART.md  RELEASE_RUNBOOK.md  SECURITY-FINDINGS.md  SECURITY.md  SELF_HOSTED_EVENT_SERVER.md  SKILL_PACKS.md  SLACK_SETUP.md  TICKETING_POLICY.md  TICKET_STATE.md  TOOL_LIBRARY.md  UNIFIED_DASHBOARD.md  WORKFLOWS.md  WORKFLOW_ENGINE.md  engineering_org_agent.md  ticketing_policy.md
event-server/: .gitignore  create-app.html  package-lock.json  package.json  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.jsonc
frontdoor/: SKILL.md
manager/: context.py  executor.py  loop.py  prompt.md  session.py  watcher.py
modastack/: __init__.py  __main__.py  __version__.py  auth.py  auth_bootstrap.py  board_setup.py  browser.py  build_render.py  cli.py  compose.py  concurrency_semaphore.py  config.py  costs.py  deploy.py  doctor.py  env.py  github_issues.py  history.py  http.py  inbox.py  manager_health.py  memory.py  model.py  paths.py  reconcile.py  registry.py  relay.py  scaffold.py  scanner.py  sdk.py  session.py  setup.py  slack.py  slack_manifest.py  spend_governor.py  state_version.py  subagent.py  summarizer.py  tmux.py  tool_library.py  (+4 more)
monitors/: defaults.yaml
plans/: 2026-07-23-design-partner-bug-batch.md  dead-transport-liveness-backstop.md  design-partner-bug-batch.md  read-only-safe-local-event-server-artifact.md  review-remediation-findings.md  review-remediation.md  scrum-agent.md  slack-socket-mode.md
poc/: tmux_claude.py
prompts/: implement.md  lifecycle.md  pr-feedback.md  preamble.md  spec-revision.md  spec.md
research/: moda-context.md
scripts/: build-team-images.sh  build-team-tarballs.sh  canary-smoke.sh  check-publishable.py  check-team-versions.py  destroy-instance.sh  fleet.sh  install.sh  provision-instance.sh  publish-team-tarballs.sh  render-team-deps.py  smoke-homebrew-bottles.sh  team-version.py  test_executor_coding.py  test_executor_live.py
skills/: bobi.md  create-agent.md  discord-setup.md  linear-setup.md  modastack.md  slack-setup.md  whatsapp-setup.md
specs/: agd-10-add-timestamp-comment-to-readme.md  agd-12-add-timestamp-comment-to-readme.md  agd-14-add-timestamp-comment-to-readme.md  agd-15-add-timestamp-comment-to-readme.md  agd-4-add-timestamp-comment-to-readme.md  agd-5-add-timestamp-comment-to-readme.md  agd-6-add-timestamp-comment-to-readme.md  agd-7-add-timestamp-comment-to-readme.md  agd-9-review-readme.md  mds-21-stall-detection.md  mds-22-remote-deployment.md  mds-24-web-dashboard.md  mds-25-self-updating.md  mds-35-multi-user-slack.md
tests/: conftest.py  test_adapters.py  test_agentui_remote.py  test_agentui_server.py  test_auth.py  test_auth_bootstrap.py  test_brain.py  test_brain_codex.py  test_brain_gateway.py  test_brain_gateway_openai.py  test_browser.py  test_bubble.py  test_build.py  test_build_render.py  test_build_spec.py  test_canary_smoke.py  test_chat_history.py  test_checks.py  test_ci_workflows.py  test_claude_write_guard.py  test_cleanup.py  test_cli.py  test_cli_versioned.py  test_codex_config.py  test_codex_server.py  test_completion_delivery.py  test_compose.py  test_concurrency_semaphore.py  test_config.py  test_connections.py  test_consult.py  test_consumer.py  test_container_paths.py  test_content_review_pack.py  test_conversation.py  test_cost_recording.py  test_costs.py  test_credentials.py  test_cross_project_discovery.py  test_curator.py  (+158 more)
workflows/: adhoc.yaml  build-failure.yaml  issue-lifecycle.yaml  pr-feedback.yaml  pr-merged.yaml  self-update.yaml  slack-question.yaml  stall-recovery.yaml
(+610 files in other folders)
