[project]
name = "bobi"
version = "0.38.0"
description = "Build teams of event-driven AI agents"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Moda Labs", email = "zach@modalabs.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "truststore>=0.9",
    "websocket-client>=1.7",
    "certifi>=2024.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.2.87",
    "mcp>=1.23.0",
    "apsw>=3.40",
]

[project.urls]
Homepage = "https://github.com/moda-labs/bobi-agent"
Repository = "https://github.com/moda-labs/bobi-agent"
Issues = "https://github.com/moda-labs/bobi-agent/issues"

[project.optional-dependencies]
kb = [
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-playwright>=0.5",
    # Pinned to match the Playwright container image used by the e2e CI job
    # (mcr.microsoft.com/playwright/python:v1.60.0-*). Bump both together so
    # the baked-in browser binary always matches the installed client.
    "playwright==1.60.0",
    "pytest-rerunfailures>=14.0",
]

[project.scripts]
bobi = "bobi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bobi"]

# Bundle the event server source so standalone (PyPI) installs can run a
# local event server — it is npm-installed and built on first use.
[tool.hatch.build.targets.wheel.force-include]
"event-server/src" = "bobi/event-server/src"
"event-server/package.json" = "bobi/event-server/package.json"
"event-server/package-lock.json" = "bobi/event-server/package-lock.json"
"event-server/tsconfig.json" = "bobi/event-server/tsconfig.json"
# Author skill guides once at repo-root skills/. Wheels receive those
# exact files under bobi/skills/ so `bobi skill ...` works without a checkout.
"skills" = "bobi/skills"
# Agent teams are NOT bundled into the wheel — they are versioned packages
# fetched from the registry (`name@version`, #440/#446/#451). Baking a frozen
# copy into the framework wheel would pin a team to the framework release and
# defeat independent team versioning. `bobi setup` lists teams from the
# registry (and, in a source checkout, the repo's `agents/` dir for dev).
# Bundle the Fly deploy assets so `bobi deploy` works from the binary alone
# — no repo checkout. The one Dockerfile builds in `pypi` mode (installs bobi
# from PyPI), so its build context is just these files; bobi/deploy.py
# resolves them from here in "binary mode".
"Dockerfile" = "bobi/_deploy/Dockerfile"
"docker/docker-entrypoint.sh" = "bobi/_deploy/docker/docker-entrypoint.sh"
"docker/healthcheck.sh" = "bobi/_deploy/docker/healthcheck.sh"
"docker/noop-deps.sh" = "bobi/_deploy/docker/noop-deps.sh"
"scripts/provision-instance.sh" = "bobi/_deploy/scripts/provision-instance.sh"
"scripts/destroy-instance.sh" = "bobi/_deploy/scripts/destroy-instance.sh"
"scripts/fleet.sh" = "bobi/_deploy/scripts/fleet.sh"

[tool.hatch.build.targets.sdist]
# `Dockerfile`, `docker/`, and `scripts/` are force-included into the wheel (the
# deploy assets), and `python -m build` builds the wheel FROM the sdist — so the
# sdist must carry them or the wheel build fails with "Forced include not found".
# Agent teams are deliberately NOT shipped in the distribution (wheel or sdist) —
# they're fetched from the registry as versioned packages (see the wheel
# force-include note above).
include = ["bobi", "event-server", "skills", "Dockerfile", "docker",
           "scripts", "README.md", "CHANGELOG.md"]
exclude = ["event-server/node_modules", "event-server/dist", "**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "claude: test requires a real Claude CLI session (deselected in integration-fast)",
    "local_only: test only runs against the local Node.js event server backend",
    "docker: test builds/runs the instance container image (needs a docker daemon; deselected in integration-fast)",
    "live: test makes a real Claude API call + hits a live event server (gated to nightly/push, not PRs)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
