[project]
name = "bobi-deploy"
version = "0.1.0"
description = "Fly deployment engine for Bobi agent teams (bobi deploy / destroy / deploy-init)"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Moda Labs", email = "zach@modalabs.ai" },
]

dependencies = [
    # The one allowed direction: bobi-deploy imports bobi, never the reverse.
    "bobi>=0.40",
    "click>=8.1",
    "pyyaml>=6.0",
]

# The deploy commands appear in the `bobi` CLI when this package is installed
# (bobi.cli discovers the `bobi.commands` group at startup).
[project.entry-points."bobi.commands"]
deploy = "bobi_deploy.cli:deploy"
deploy-init = "bobi_deploy.cli:deploy_init"
destroy = "bobi_deploy.cli:destroy"

[tool.hatch.build.targets.wheel]
packages = ["src/bobi_deploy"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
