[project]
name = "bobi-deploy"
version = "0.1.0"
description = "Fly deployment engine for Bobi agent teams (bobi build / deploy / destroy / deploy-init)"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Moda Labs", email = "zach@modalabs.ai" },
]

dependencies = [
    # The one allowed direction: bobi-deploy imports bobi, never the reverse.
    # This floor MUST be raised to the first bobi release that ships the
    # carve-out seams (bobi.build.resolve_team_dir, bobi.config.scan_*, and
    # the #707 cli.py that no longer mounts its own `build` command) before
    # this wheel is published anywhere - 0.40.0 satisfies the pin but lacks
    # those APIs. It stays at the in-repo version until then so editable
    # co-installs resolve.
    "bobi>=0.40",
    "click>=8.1",
    "pyyaml>=6.0",
]

# The deploy commands appear in the `bobi` CLI when this package is installed
# (bobi.cli discovers the `bobi.commands` group at startup).
[project.entry-points."bobi.commands"]
build = "bobi_deploy.cli:build"
deploy = "bobi_deploy.cli:deploy"
deploy-init = "bobi_deploy.cli:deploy_init"
destroy = "bobi_deploy.cli:destroy"

[tool.hatch.build.targets.wheel]
packages = ["src/bobi_deploy"]

# Bundle the deploy assets so `bobi build` / `bobi deploy` work from wheels
# alone - no repo checkout (#707, moved here from the public bobi wheel). The
# one Dockerfile builds in `pypi` mode (installs bobi from PyPI), so its build
# context is just these files; bobi_deploy/build.py resolves them from here in
# "binary mode". Paths are ../-relative while this package lives inside the
# bobi repo, so the wheel must be built from the repo tree (editable installs
# and source checkouts use source mode and never read this bundle).
[tool.hatch.build.targets.wheel.force-include]
"../Dockerfile" = "bobi_deploy/_deploy/Dockerfile"
"../docker/docker-entrypoint.sh" = "bobi_deploy/_deploy/docker/docker-entrypoint.sh"
"../docker/healthcheck.sh" = "bobi_deploy/_deploy/docker/healthcheck.sh"
"../docker/noop-deps.sh" = "bobi_deploy/_deploy/docker/noop-deps.sh"
"../scripts/provision-instance.sh" = "bobi_deploy/_deploy/scripts/provision-instance.sh"
"../scripts/destroy-instance.sh" = "bobi_deploy/_deploy/scripts/destroy-instance.sh"
"../scripts/fleet.sh" = "bobi_deploy/_deploy/scripts/fleet.sh"

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
